--- a/frontend/static/css/style.css
+++ b/frontend/static/css/style.css
@@ -1246,6 +1246,25 @@ body {
     margin-bottom: 0;
 }
 
+/* Prevent compact inputs in modal inline groups (like Create Fee search/select) */
+.modal .form-group > div[style*="display:flex"] .form-input {
+    flex: 1 1 auto;
+}
+.modal .form-group > div[style*="display:flex"] .form-select {
+    flex: 0 0 260px;
+}
+
+@media (max-width: 600px) {
+    .modal .form-group > div[style*="display:flex"] {
+        flex-direction: column;
+        align-items: stretch;
+    }
+    .modal .form-group > div[style*="display:flex"] .form-select {
+        flex: 0 0 auto;
+        min-width: 100%;
+    }
+}
+
 .checkbox-label {
     display: flex;
     align-items: flex-start;
